# orm_bitrix24

./: .gitignore  CHANGELOG.md  README.md  activity_contact.py  architecture.md  file_test_example.py  lead_test.py  main.py  portal_example.py  pyproject.toml  test_activity_example.py  test_contact_userfields.py  test_enum_fields.py  test_portal_example.py  test_userfield.py  timeline_example.py  userfields.py
orm_bitrix24/entity/: __init__.py  base.py  deal.py  lead.py
tests/: README.md
