[project]
name = "orm-bitrix24"
version = "0.1.0"
description = "ORM for Bitrix24 REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-bitrix24",
    "python-dotenv",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]
